--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
+  <button type="button" name="button" class="closeChilds">close-childs</button>
+  <button type="button" name="button" class="openChilds">open-childs</button>
 
   <script src="build/js/vendor.min.js"></script>
   <script src="build/js/app.min.js"></script>
+
 </body>
 
 </html>
